--- a/main.tex
+++ b/main.tex
@@ -99,7 +99,7 @@
 
 \pagestyle{fancy} % Enable headers and footers again
 
-\input{foreword.tex}
+%\input{foreword.tex}
 \part{Computation}
 %\input{chapters/Chapter1-computer_architecture.tex}
 %\input{chapters/Chapter2-digital_systems.tex}
@@ -111,10 +111,7 @@
 \part{Information}
 \input{chapters/Chapter7-measures_of_information.tex}
 \input{chapters/Chapter8-source_coding.tex}
-\input{chapters/Chapter9-channel-coding.tex}
-
-
-
+%\input{chapters/Chapter9-channel-coding.tex}
 
 %----------------------------------------------------------------------------------------
 %	BIBLIOGRAPHY
