--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,24 +1,111 @@
-@book{book_key,
-	address = {City},
-	publisher = {Publisher},
-	author = {Smith, John},
-	title = {Book title},
-	year = {2012},
-	volume = {3},
-	series = {2},
-	edition = {1},
-	pages = {123--200},
-	month = {January}
+@article{Aczel_74,
+  title = {Why the Shannon and Hartley Entropies Are Natural},
+  author = {Acz\'el, J. and Forte, B. and Ng, C. T.},
+  journal = {Advances in Applied Probability},
+  volume = {6},
+  number = {1},
+  pages = {pp. 131-146},
+  ISSN = {00018678},
+  year = {1974},
+  publisher = {Applied Probability Trust},
 }
 
-@article{article_key,
-	address = {City},
-	publisher = {Publisher},
-	author = {Smith, James},
-	title = {Article title},
-	year = {2013},
-	volume = {14},
-	number = {6},
-	pages = {1--8},
-	month = {March}
+@book{Aczel_75,
+  author = {Aczel, J. and Daroczy, Z.},
+  title = {On measures of information and their characterizations},
+  publisher = {Academic Press},
+  year = {1975}
 }
+
+@book{Cover_91,
+  author = {Cover, T. M. and Thomas, J. A.},
+  month = aug,
+  publisher = {Wiley-Interscience},
+  title = {{Elements of Information Theory}},
+  year = {1991}
+}
+
+@article{Csiszar_08,
+  author = {I. Csisz\'ar},
+  title = {Axiomatic Characterizations of Information Measures},
+  journal = {Entropy},
+  year = {2008},
+  volume = {10},
+  pages = {261--273}
+}
+
+@book{Feinstein_58,
+  author = {Feinstein, A.},
+  publisher = McGraw-Hill,
+  title = {Foundations of Information Theory},
+  year = 1958
+}
+
+@article{Gallager_62,
+  author = {Gallager, R. G.},
+  journal = {IRE Transactions on Information Theory},
+  title = "{Low-density parity-check codes}",
+  year = {1962},
+  month = {Jan.},
+  volume = {8},
+  number = {1},
+  pages = {21-28}
+}
+
+@book{Gallager_63,
+  author = {Gallager, R. G.},
+  title = "{Low-density parity-check codes}",
+  publisher = {MIT Press, Cambridge},
+  year = {1963}
+}
+
+@book{Gallager_68,
+  author = {Gallager, R. G.},
+  title = {Information Theory and Reliable Communication},
+  year = {1968},
+  publisher = {John Wiley \& Sons, Inc.},
+  address = {New York, NY, USA},
+}
+
+@article{Gallager_01,
+  author = {R. G. Gallager},
+  journal = {IEEE Transactions on Information Theory},
+  number = 7,
+  pages = {2681-2695},
+  title = {Claude {E}. {Shannon}: a retrospective on his life, work, and impact},
+  volume = 47,
+  year = 2001,
+  month = Nov,
+}
+
+
+@article{Karush_61, 
+  author={Karush, J.}, 
+  journal={IRE Transactions on Information Theory}, 
+  title={A simple proof of an inequality of McMillan (Corresp.)}, 
+  year={1961}, 
+  month={Apr. }, 
+  volume={7}, 
+  number={2}, 
+  pages={118}, 
+}
+
+@article{McMillan_56,
+  author = {McMillan, B.},
+  title = {Two inequalities implied by unique decipherability},
+  journal = {IRE Transactions on Information Theory},
+  year = {1956},
+  month = {Dec.},
+  volume = {2},
+  pages = {115-116}
+}
+@article{Shannon_48,
+  author = {C. E. Shannon},
+  journal = {The Bell system technical journal},
+  pages = {379--423},
+  title = {A mathematical theory of Communication},
+  volume = 27,
+  year = 1948,
+  month = {Jul.}
+}
+
