--- a/main.tex
+++ b/main.tex
@@ -90,6 +90,7 @@
 %----------------------------------------------------------------------------------------
 
 %\chapterimage{chapter_head_eniac.jpg} % Table of contents heading image
+\usechapterimagefalse
 
 \pagestyle{empty} % Disable headers and footers for the following pages
 
@@ -116,7 +117,7 @@
 %----------------------------------------------------------------------------------------
 %	BIBLIOGRAPHY
 %----------------------------------------------------------------------------------------
-\chapterimage{}
+\usechapterimagefalse
 \chapter*{Bibliography}
 \addcontentsline{toc}{chapter}{\textcolor{ocre}{Bibliography}} % Add a Bibliography heading to the table of contents
 \printbibliography[heading=bibempty]
