--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,10 +1,10 @@
 @article{Aczel_74,
   title = {Why the Shannon and Hartley Entropies Are Natural},
-  author = {Acz\'el, J. and Forte, B. and Ng, C. T.},
+  author = {Aczel, J. and Forte, B. and Ng, C. T.},
   journal = {Advances in Applied Probability},
   volume = {6},
   number = {1},
-  pages = {pp. 131-146},
+  pages = {131--146},
   ISSN = {00018678},
   year = {1974},
   publisher = {Applied Probability Trust},
@@ -36,7 +36,7 @@
 
 @book{Feinstein_58,
   author = {Feinstein, A.},
-  publisher = McGraw-Hill,
+  publisher = {McGraw-Hill},
   title = {Foundations of Information Theory},
   year = 1958
 }
@@ -84,7 +84,7 @@
   journal={IRE Transactions on Information Theory}, 
   title={A simple proof of an inequality of McMillan (Corresp.)}, 
   year={1961}, 
-  month={Apr. }, 
+  month={4}, 
   volume={7}, 
   number={2}, 
   pages={118}, 
@@ -95,7 +95,7 @@
   title = {Two inequalities implied by unique decipherability},
   journal = {IRE Transactions on Information Theory},
   year = {1956},
-  month = {Dec.},
+  month = {12},
   volume = {2},
   pages = {115-116}
 }
@@ -106,6 +106,6 @@
   title = {A mathematical theory of Communication},
   volume = 27,
   year = 1948,
-  month = {Jul.}
+  month = {7}
 }
 
